fixed mode button on mobile device

--- a/src/App.css
+++ b/src/App.css
@@ -194,3 +194,10 @@ body {
   align-items: center;
   flex-direction: column;
 }
+
+.mode-cont {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 1em;
+}
